--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
   "homepage": "https://github.com/TeelaPat26/refine-prerequisite#readme",
   "description": "",
   "devDependencies": {
+    "@refinedev/core": "^4.56.0",
     "@types/jest": "^29.5.14",
     "jest": "^29.7.0",
     "ts-jest": "^29.2.5",
-    "tsup": "^8.3.5"
+    "tsup": "^8.3.5",
+    "ulid": "^2.3.0"
   }
 }
