--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "refine-prerequisite",
-  "version": "1.0.1",
+  "version": "1.0.4",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
@@ -9,8 +9,7 @@
   ],
   "scripts": {
     "build": "jest && tsup",
-    "test": "jest",
-    "postinstall": "node scripts/copyEnv.js"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -26,6 +25,7 @@
   "devDependencies": {
     "@refinedev/core": "^4.56.0",
     "@types/jest": "^29.5.14",
+    "gently-copy": "^3.2.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.2.5",
     "tsup": "^8.3.5",
