--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   ],
   "scripts": {
     "test": "jest",
-    "build": "jest && tsup"
+    "build": "jest && tsup",
+    "postinstall": "node lib/copyEnv.js"
   },
   "repository": {
     "type": "git",
@@ -25,7 +26,6 @@
   "devDependencies": {
     "@refinedev/core": "^4.56.0",
     "@types/jest": "^29.5.14",
-    "gently-copy": "^3.2.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.2.5",
     "tsup": "^8.3.5",
