--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "refine-prerequisite",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
@@ -10,7 +10,7 @@
   "scripts": {
     "test": "jest",
     "build": "jest && tsup",
-    "postinstall": "node lib/copyEnv.js"
+    "postinstall": "copy-files-from-to"
   },
   "repository": {
     "type": "git",
@@ -30,5 +30,8 @@
     "ts-jest": "^29.2.5",
     "tsup": "^8.3.5",
     "ulid": "^2.3.0"
+  },
+  "dependencies": {
+    "copy-files-from-to": "^3.12.0"
   }
 }
