--- a/package.json
+++ b/package.json
@@ -1,17 +1,19 @@
 {
   "name": "refine-prerequisite",
-  "version": "1.0.12",
+  "version": "1.0.16",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
   "files": [
     "dist",
+    "components",
     "copy-files-from-to.json"
   ],
   "scripts": {
     "test": "jest",
-    "build": "jest && tsup",
-    "postinstall": "copy-files-from-to"
+    "build": "jest && tsup && npm run postbuild",
+    "postinstall": "copy-files-from-to --config copy-files-after-install.json",
+    "postbuild": "copy-files-from-to --config lib/copy-build-related-files.json"
   },
   "repository": {
     "type": "git",
@@ -25,11 +27,14 @@
   "homepage": "https://github.com/TeelaPat26/refine-prerequisite#readme",
   "description": "",
   "devDependencies": {
+    "@ant-design/icons": "^5.5.2",
     "@refinedev/core": "^4.56.0",
     "@types/jest": "^29.5.14",
+    "antd": "^5.22.4",
     "jest": "^29.7.0",
     "ts-jest": "^29.2.5",
     "tsup": "^8.3.5",
+    "typescript": "^5.7.2",
     "ulid": "^2.3.0"
   },
   "dependencies": {
