--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
         "moduleResolution": "Node",
         "declaration": true,
         "outDir": "dist",
+        "jsx": "react-jsx"
     },
-    "include": ["src"],
-    "exclude": ["node_modules"]
+    "include": ["src", "components"],
+    "exclude": ["node_modules", "components"]
 }
