--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
   "name": "refine-prerequisite",
-  "version": "1.0.16",
+  "version": "1.0.21",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
   "files": [
     "dist",
     "components",
-    "copy-files-from-to.json"
+    "copy-files-after-install.json"
   ],
   "scripts": {
     "test": "jest",
     "build": "jest && tsup && npm run postbuild",
-    "postinstall": "copy-files-from-to --config copy-files-after-install.json",
-    "postbuild": "copy-files-from-to --config lib/copy-build-related-files.json"
+    "postbuild": "copy-files-from-to --config lib/copy-build-related-files.json",
+    "postinstall": "copy-files-from-to --config copy-files-after-install.json"
   },
   "repository": {
     "type": "git",
@@ -27,10 +27,8 @@
   "homepage": "https://github.com/TeelaPat26/refine-prerequisite#readme",
   "description": "",
   "devDependencies": {
-    "@ant-design/icons": "^5.5.2",
     "@refinedev/core": "^4.56.0",
     "@types/jest": "^29.5.14",
-    "antd": "^5.22.4",
     "jest": "^29.7.0",
     "ts-jest": "^29.2.5",
     "tsup": "^8.3.5",
@@ -38,6 +36,8 @@
     "ulid": "^2.3.0"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.5.2",
+    "antd": "^5.22.4",
     "copy-files-from-to": "^3.12.0"
   }
 }
