--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "refine-prerequisite",
-  "version": "1.0.24",
+  "version": "1.0.26",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
@@ -11,8 +11,8 @@
   "scripts": {
     "test": "jest",
     "build": "jest && tsup",
-    "postbuild": "copy-files-from-to --config copy-config/postbuild.cjson",
-    "postinstall": "copy-files-from-to --config copy-config/postinstall.cjson"
+    "postbuild": "copy-files-from-to --config copy-config/postbuild.json",
+    "postinstall": "copy-files-from-to --config copy-config/postinstall.json"
   },
   "repository": {
     "type": "git",
