--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "test": "jest",
     "build": "jest && tsup",
     "postbuild": "copy-files-from-to --config copy-config/postbuild.json",
-    "postinstall": "copy-files-from-to --config copy-config/postinstall.json"
+    "postinstall": "copy-files-from-to --config copy-config/postinstall.json",
+    "semantic-release": "semantic-release"
   },
   "repository": {
     "type": "git",
@@ -29,6 +30,7 @@
     "@refinedev/core": "^4.56.0",
     "@types/jest": "^29.5.14",
     "jest": "^29.7.0",
+    "semantic-release": "^24.2.0",
     "ts-jest": "^29.2.5",
     "tsup": "^8.3.5",
     "typescript": "^5.7.2",
