fix(workflow): fix typo

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,7 +24,7 @@ jobs:
           node-version: "lts/*"
 
       # Install dependencies.
-      - run: npm ci
+      - run: npm install
 
       # Build the project.
       - run: npm run build
