--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,7 +24,7 @@ jobs:
           node-version: "lts/*"
 
       # Install dependencies.
-      - run: npm install
+      - run: npm install --ignore-scripts
 
       # Build the project.
       - run: npm run build
