--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "devDependencies": {
     "@refinedev/core": "^4.56.0",
     "@types/jest": "^29.5.14",
+    "cz-conventional-changelog": "^3.3.0",
     "jest": "^29.7.0",
     "semantic-release": "^24.2.0",
     "ts-jest": "^29.2.5",
@@ -43,5 +44,10 @@
   },
   "publishConfig": {
     "access": "public"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
