--- a/package.json
+++ b/package.json
@@ -29,13 +29,13 @@
   "devDependencies": {
     "@refinedev/core": "^4.56.0",
     "@types/jest": "^29.5.14",
+    "axios": "^1.7.9",
     "cz-conventional-changelog": "^3.3.0",
     "jest": "^29.7.0",
     "semantic-release": "^24.2.0",
     "ts-jest": "^29.2.5",
     "tsup": "^8.3.5",
-    "typescript": "^5.7.2",
-    "ulid": "^2.3.0"
+    "typescript": "^5.7.2"
   },
   "dependencies": {
     "@ant-design/icons": "^5.5.2",
