--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
   "types": "./dist/index.d.ts",
   "files": [
     "dist",
-    "copy-config"
+    "copy-config",
+    "lib"
   ],
   "scripts": {
     "test": "jest",
     "build": "jest && tsup",
     "postbuild": "copy-files-from-to --config copy-config/postbuild.json",
-    "postinstall": "copy-files-from-to --config copy-config/postinstall.json",
     "semantic-release": "semantic-release"
   },
   "repository": {
@@ -29,6 +29,7 @@
   "devDependencies": {
     "@refinedev/core": "^4.56.0",
     "@types/jest": "^29.5.14",
+    "@types/shelljs": "^0.8.15",
     "axios": "^1.7.9",
     "cz-conventional-changelog": "^3.3.0",
     "jest": "^29.7.0",
@@ -40,7 +41,9 @@
   "dependencies": {
     "@ant-design/icons": "^5.5.2",
     "antd": "^5.22.4",
-    "copy-files-from-to": "^3.12.0"
+    "commander": "^12.1.0",
+    "copy-files-from-to": "^3.12.0",
+    "shelljs": "^0.8.5"
   },
   "publishConfig": {
     "access": "public"
@@ -49,5 +52,8 @@
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
+  },
+  "bin": {
+    "add-login": "lib/add-login/add-login.js"
   }
 }
